feat: added swagger docs for auth controller
