# app/Http/Controllers/AuthController.php
@@ -11,17 +11,40 @@ use Illuminate\Support\Facades\Hash;
 class AuthController extends Controller
 {
     /**
-     * Register
+     * @OA\Post(
+     *      path="/api/v1/register",
+     *      operationId="register",
+     *      tags={"Register"},
+     *      summary="Register user",
+     *      description="Registers user in the system",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreRegisterRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/RegisterResponse")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *     )
+     *
+     */
+    /*
+    * Register
      *
      * @return \Illuminate\Http\JsonResponse
      */
     public function register(Request $request): JsonResponse
     {
         $data = $request->validate([
-           'name' => 'required|string',
-           'email' => 'required|email',
-           'password' => 'required',
-        ]);
+                                       'name' => 'required|string',
+                                       'email' => 'required|email',
+                                       'password' => 'required',
+                                   ]);
 
         /* @var \App\Models\User $user */
         $user = User::where('email', $request->email)->first();
@@ -31,16 +54,16 @@ class AuthController extends Controller
         }
 
         $user = User::create([
-             'name' => $data['name'],
-             'email' => $data['email'],
-             'password' => Hash::make($data['password']),
-        ]);
+                                 'name' => $data['name'],
+                                 'email' => $data['email'],
+                                 'password' => Hash::make($data['password']),
+                             ]);
 
         $token = $user->createToken('auth_token')->plainTextToken;
         return response()->json([
-            'access_token' => $token,
-            'token_type' => 'Bearer',
-        ]);
+                                    'access_token' => $token,
+                                    'token_type' => 'Bearer',
+                                ]);
     }
 
     /**
@@ -51,9 +74,9 @@ class AuthController extends Controller
     public function login(Request $request): JsonResponse
     {
         $request->validate([
-           'email' => 'required|email',
-           'password' => 'required',
-        ]);
+                               'email' => 'required|email',
+                               'password' => 'required',
+                           ]);
 
         /* @var \App\Models\User $user */
         $user = User::where('email', $request->email)->first();
@@ -65,8 +88,8 @@ class AuthController extends Controller
         $token = $user->createToken('auth_token')->plainTextToken;
 
         return response()->json([
-            'access_token' => $token,
-            'token_type' => 'Bearer',
-        ]);
+                                    'access_token' => $token,
+                                    'token_type' => 'Bearer',
+                                ]);
     }
 }
